<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SV"
    tools:context=".EditorActivity">

    <LinearLayout style="@style/LLV1">

        <!-- overview layout -->
        <LinearLayout
            android:id="@+id/overview_container"
            style="@style/LLH2">

            <!-- overview label -->
            <TextView style="@style/TV3" />

            <!-- input fields-->
            <LinearLayout style="@style/LLV3">

                <!-- name field-->
                <EditText
                    android:id="@+id/edit_cheese_name"
                    style="@style/ET1"
                    android:hint="@string/edit_hint_cheese_name"
                    android:inputType="textCapWords" />

                <!-- cheese image -->
                <ImageView
                    android:id="@+id/edit_cheese_image"
                    style="@style/IV2"
                    android:contentDescription="@string/cheese_image_view_placeholder" />

                <!-- add image button -->
                <Button
                    android:id="@+id/editor_add_image_button"
                    style="@style/Button1" />
            </LinearLayout>

        </LinearLayout>

        <!-- price layout -->
        <LinearLayout
            android:id="@+id/price_container"
            style="@style/LLH2">

            <!-- price label -->
            <TextView style="@style/TV4" />

            <!-- Input fields -->
            <RelativeLayout style="@style/RL3">

                <!-- price field -->
                <EditText
                    android:id="@+id/edit_cheese_price"
                    style="@style/ET1"
                    android:hint="@string/edit_hint_cheese_price"
                    android:inputType="numberDecimal" />

                <!-- Units for price (€) -->
                <TextView
                    android:id="@+id/label_price_units"
                    style="@style/TV5" />
            </RelativeLayout>
        </LinearLayout>

        <!-- quantity layout -->
        <LinearLayout
            android:id="@+id/quantity_container"
            style="@style/LLH2">

            <!-- quantity label -->
            <TextView style="@style/TV6" />

            <!-- input field -->
            <LinearLayout style="@style/LLH4">

                <!-- minus button -->
                <Button
                    android:id="@+id/minus_button"
                    style="@style/Button2"
                    android:text="@string/editor_minus_button" />

                <!-- quantity field-->
                <EditText
                    android:id="@+id/edit_cheese_quantity"
                    style="@style/ET1"
                    android:inputType="number"
                    android:text="@string/edit_initial_cheese_quantity" />

                <!-- plus button -->
                <Button
                    android:id="@+id/plus_button"
                    style="@style/Button2"
                    android:text="@string/edit_plus_button" />
            </LinearLayout>
        </LinearLayout>

        <!-- supplier layout -->
        <LinearLayout
            android:id="@+id/supplier_container"
            style="@style/LLH2">

            <!-- supplier label -->
            <TextView style="@style/TV7" />

            <!-- Input field -->
            <LinearLayout style="@style/LLH4">

                <!-- supplier drop-down spinner -->
                <Spinner
                    android:id="@+id/edit_cheese_supplier"
                    style="@style/spinner" />
            </LinearLayout>
        </LinearLayout>

        <!-- order layout -->
        <LinearLayout
            android:id="@+id/order_container"
            style="@style/LLH2">

            <!-- order label -->
            <TextView style="@style/TV8" />

            <!-- input field -->
            <LinearLayout style="@style/LLH4">

                <!-- add image button -->
                <Button
                    android:id="@+id/editor_order_button"
                    style="@style/Button3" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>